# surrealmcp

./: .gitattributes  .gitignore  Cargo.toml
src/: main.rs
src/cli/: manager.rs  mod.rs
src/prompts/: mod.rs
src/resources/: mod.rs
src/server/: start.rs
src/tools/: mod.rs
src/utils/: mod.rs
tests/: session_connection.rs
