[package]
name = "surrealmcp"
version = "0.4.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
governor = "0.10.4"
http = "1.4.0"
jsonwebtoken = "10.3.0"
metrics = "0.24.3"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "http2",
    "rustls",
] }
ring = "0.17.14"
rmcp = { version = "1.3.0", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-worker",
] }
rustls = { version = "0.23.37", features = ["ring"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = { version = "3.0.5", features = [
    "rustls",
    "kv-mem",
    "kv-rocksdb",
    "kv-surrealkv",
    "protocol-ws",
    "protocol-http",
    "http",
] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
